@@ -6,14 +6,13 @@ import (
 )
 
 func Run(app string, command []string, env map[string]string) (*http.Response, error) {
-	req := map[string]interface{}{
-		"method":   "POST",
-		"endpoint": "/apps/" + app + "/run",
-		"params": map[string]interface{}{
+	req := &APIRequest{
+		Method:   "POST",
+		Endpoint: "/apps/" + app + "/run",
+		Params: map[string]interface{}{
 			"command": strings.Join(command, " "),
 			"env":     env,
 		},
-		"expected": Statuses{200},
 	}
-	return Do(req)
+	return req.Do()
 }
