@@ -3,19 +3,19 @@ package api
 import "gopkg.in/errgo.v1"
 
 func SignUp(email, password string) error {
-	req := map[string]interface{}{
-		"auth":     false,
-		"method":   "POST",
-		"endpoint": "/users",
-		"expected": Statuses{201},
-		"params": map[string]interface{}{
+	req := &APIRequest{
+		NoAuth:   true,
+		Method:   "POST",
+		Endpoint: "/users",
+		Expected: Statuses{201},
+		Params: map[string]interface{}{
 			"user": map[string]string{
 				"email":    email,
 				"password": password,
 			},
 		},
 	}
-	_, err := Do(req)
+	_, err := req.Do()
 	if err != nil {
 		return errgo.Mask(err)
 	}
